--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                 Como las plataformas Crunchyroll y Funimation  no son gratuitas comencé a ver cualquier cosa que me llamara la atención
                 en <b>AnimeFLV</b>, el inconveniente es que no hay total acceso a todos los animes con doblaje latino, pero no esta nada mal
                 para ser algo completamente gratuito.
+                <br><br>
+                <img src="./Imagenes/animeflv.jpg">
             </p>
         </a>
         <a name=Videojuegos>
@@ -82,11 +84,14 @@
                 En diciembre del año pasado comencé a explorar algunos juegos para celular con mis amigos como Call of Duty Mobile, Among Us,
                 Roblox y Minecraft.
                 <br><br>
+                <img src="./Imagenes/among.jpg">
                 <br><br>
                 Aunque hay gran diversidad de juegos, con mis amigos más cercanos jugamos Free Fire que a pesar no ser uno de los mejores, cuando
-                te acostumbras le agarras cierto cariño a algunos aspectos. Los gráficos no son los mejores y es un <b>Pay to win</b>, lo cual si no
+                te acostumbras. Los gráficos no son los mejores y es un <b>Pay to win</b>, lo cual si no
                 tienes dinero, lo único que tienes son tus habilidad y otros jugadores tienen ventajas sobre ti; el juego no le exige muchos recursos 
-                al celular y mientras estas con amigos realmente no importa si ganas o pierdes.
+                al celular y mientras estas con amigos realmente no importa si ganas o pierdes, a parte la comunidad es muy tóxica.
+                <br><br>
+                <img src="./Imagenes/free.jpg">
             </p>
         </a>
         <a name=Llamadas>
@@ -99,11 +104,18 @@
                 Ocupamos Messenger y a veces zoom, pero probablemente dentro de algunos días nos mudemos a Discord
                 debido a que tiene una latencia menor.
                 <br><br>
+                <img src="./Imagenes/Discord.png">
                 <br><br>
                 Siempre que hablamos suele ser sobre temas muy aleatorios, a veces es sobre juegos, noticias, escuela o anécdotas de nuestra vida.
             </p>
         </a>
     </div>
+
+    <footer>
+        <h4>©4IV9 Pérez López Jesús Eduardo</h4>
+        <br>
+        <h5>Todos los derechos reservados</h5>
+    </footer>
     
 </body>
 </html>
