--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 Ocupamos Messenger y a veces zoom, pero probablemente dentro de algunos días nos mudemos a Discord
                 debido a que tiene una latencia menor.
                 <br><br>
-                <img src="./Imagenes/Discord.png">
+                <img src="./Imagenes/discord.png">
                 <br><br>
                 Siempre que hablamos suele ser sobre temas muy aleatorios, a veces es sobre juegos, noticias, escuela o anécdotas de nuestra vida.
             </p>
